--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -4,3 +4,8 @@ footer
     p © 2017 Company, Inc. · 
     	a(href="#") Privacy
     	a(href="#") Terms
+    script(src="/js/vendor/jquery-3.2.1.min.js")
+    script(src="/js/vendor/tether.min.js") 
+    script(src="/js/vendor/bootstrap.min.js") 
+    script(src="/js/vendor/holder.min.js") 
+    script(src="/js/vendor/ie10-viewport-bug-workaround.js") 
