--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,39 +1,25 @@
 include head
 body
-    nav(class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse")
-        button(class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation")
-            span(class="navbar-toggler-icon")
-        a(class="navbar-brand" href="#") Франшиза.рф
-      div(class="collapse navbar-collapse" id="navbarCollapse") 
-        ul(class="navbar-nav mr-auto") 
-          li(class="nav-item active") 
-            a(class="nav-link" href="#")
-                span(class="sr-only") Home
-          li(class="nav-item") 
-            a(class="nav-link" href="#") Link
-          li(class="nav-item") 
-            a(class="nav-link disabled" href="#") Disabled
-        form(class="form-inline mt-2 mt-md-0") 
-          input(class="form-control mr-sm-2" type="text" placeholder="Search") 
-          button(class="btn btn-outline-success my-2 my-sm-0" type="submit") Search
+    include menu
+    include banner
     div(class="container marketing")
-      div(class="row") 
-        div(class="col-lg-4") 
-          img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
-          h2 Heading
-          p Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-          p 
-            a(class="btn btn-secondary" href="#" role="button") View details »
-        div(class="col-lg-4") 
-          img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
-          h2 Heading
-          p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
-          p 
-            a(class="btn btn-secondary" href="#" role="button") View details »
-        div(class="col-lg-4") 
-          img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
-          h2 Heading
-          p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-          p 
-            a(class="btn btn-secondary" href="#" role="button") View details »
+        div(class="row") 
+            div(class="col-lg-4") 
+                img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
+                h2 Heading
+                p Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
+                p 
+                    a(class="btn btn-secondary" href="#" role="button") View details »
+            div(class="col-lg-4") 
+                img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
+                h2 Heading
+                p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
+                p 
+                    a(class="btn btn-secondary" href="#" role="button") View details »
+            div(class="col-lg-4") 
+                img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
+                h2 Heading
+                p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+                p 
+                    a(class="btn btn-secondary" href="#" role="button") View details »
 include footer
