--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -1,5 +1,4 @@
 body {
-  padding: 1em;
   color: #5a5a5a;
 }
 
@@ -45,6 +44,12 @@ body {
 }
 
 .album {
+  .container {
+    .row {
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
   min-height: 50rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
@@ -53,9 +58,10 @@ body {
 
 .card {
   float: left;
-  width: 33.333%;
-  padding: .75rem;
-  margin: .025rem;
+  width: 30%;
+  margin-left: calc(10%/6);
+  margin-right: calc(10%/6);
+  padding: .5rem;
   margin-bottom: 2rem;
   border: 0;
 }
@@ -71,8 +77,7 @@ body {
 }
 
 footer {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding: 1.5rem;
 }
 
 footer {
