--- a/src/pug/banner.pug
+++ b/src/pug/banner.pug
@@ -1,6 +1,8 @@
-<section class="jumbotron text-center">
-	<div class="container">
-		<h1 class="jumbotron-heading">Album example</h1>
-		<p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
-	</div>
-</section>
+section(class="jumbotron" style="margin: 0 auto; background: #888; position: relative;")
+	div(style="margin: 0 auto; width: 50%; display: block;")
+		div(class="container" style="width: 45%; margin: 0; display: inline-block;")
+			h1(class="jumbotron-heading") Логотип
+			p(class="lead text-muted") Первый портал с отзывами...
+		div(class="container" style="position: absolute; margin 10px; bottom: 0; right: 0;")
+			p
+				a(href="#") Вся правда о франчайзенге
