--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,17 +9,17 @@ body
                 h2 Heading
                 p Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
                 p 
-                    a(class="btn btn-secondary" href="#" role="button") View details »
+                    a(class="btn btn-secondary" href="/internal.html" role="button") View details »
             div(class="col-lg-4") 
                 img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
                 h2 Heading
                 p Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
                 p 
-                    a(class="btn btn-secondary" href="#" role="button") View details »
+                    a(class="btn btn-secondary" href="/internal.html" role="button") View details »
             div(class="col-lg-4") 
                 img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
                 h2 Heading
                 p Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
                 p 
-                    a(class="btn btn-secondary" href="#" role="button") View details »
+                    a(class="btn btn-secondary" href="/internal.htmlss" role="button") View details »
 include footer
