--- a/src/pug/banner.pug
+++ b/src/pug/banner.pug
@@ -1,4 +1,4 @@
-section(class="jumbotron" style="margin: 0 auto 25px auto; background: #888; position: relative;")
+section(class="jumbotron" style="margin: 0 auto; background: #888; position: relative;")
 	div(style="margin: 0 auto; width: 50%; display: block;")
 		div(class="container" style="width: 45%; margin: 0; display: inline-block;")
 			h1(class="jumbotron-heading") Логотип
@@ -6,3 +6,6 @@ section(class="jumbotron" style="margin: 0 auto 25px auto; background: #888; pos
 		div(class="container" style="position: absolute; margin 10px; bottom: 0; right: 0;")
 			p
 				a(href="#") Вся правда о франчайзенге
+div(class="container" style="margin:0 auto 25px auto; display: block; height: 60px; background: #999; ")
+	p Баннер
+p Главная - оптовая торговле франшиза
