--- a/src/pug/menu.pug
+++ b/src/pug/menu.pug
@@ -1,7 +1,7 @@
 nav(class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse")
   button(class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation")
       span(class="navbar-toggler-icon")
-  a(class="navbar-brand" href="/") Франшиза.рф
+  a(class="navbar-brand" href="index.html")
   div(class="collapse navbar-collapse" id="navbarCollapse") 
     ul(class="navbar-nav mr-auto") 
       li(class="nav-item") 
@@ -11,5 +11,5 @@ nav(class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse")
         a(class="nav-link" href="#") Контакты
       li(class="nav-item") 
         a(class="nav-link" href="#") О проекте
-      li(class="nav-item active") 
-        a(class="nav-link" href="/") Главная
+      li(class="nav-item") 
+        a(class="nav-link" href="index.html") Главная
