--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -23,6 +23,14 @@ body {
     padding-left: 1em;
 }
 
+.form-inline {
+  justify-content: center;
+}
+
+.mr-sm-2 {
+  width: 650px !important;
+}
+
 .marketing {
   .col-lg-4 {
     margin-bottom: 1.5rem;
@@ -67,7 +75,7 @@ body {
 .album {
   .container {
     .row {
-      justify-content: space-between;
+      justify-content: flex-start;
       align-items: center;
     }
   }
@@ -79,9 +87,9 @@ body {
 
 .card {
   float: left;
-  width: 30%;
-  margin-left: calc(10%/6);
-  margin-right: calc(10%/6);
+  width: 18%;
+  margin-left: 1%;
+  margin-right: 1%;
   padding: .5rem;
   margin-bottom: 2rem;
   border: 0;
@@ -99,6 +107,7 @@ body {
 
 footer {
   padding: 1.5rem;
+  background-color: #888;
 }
 
 footer {
