--- a/src/pug/banner.pug
+++ b/src/pug/banner.pug
@@ -1,11 +1,13 @@
-section(class="jumbotron" style="margin: 0 auto; background: #888; position: relative;")
+section(class="jumbotron" style="margin: 0 auto; background: #888; position: relative; height: 650px;")
 	div(style="margin: 0 auto; width: 50%; display: block;")
 		div(class="container" style="width: 45%; margin: 0; display: inline-block;")
 			h1(class="jumbotron-heading") Логотип
-			p(class="lead text-muted") Первый портал с отзывами...
+			p(class="lead text-muted") Первый профессиональный портал с отзывами о франшизах России и СНГ
 		div(class="container" style="position: absolute; margin 10px; bottom: 0; right: 0;")
-			p
-				a(href="#") Вся правда о франчайзенге
-div(class="container" style="margin:0 auto 25px auto; display: block; height: 60px; background: #999; ")
+			//p Вся правда о франчайзенге
+div(class="container" style="margin:0 auto 25px auto; display: block; width: 728px; height: 90px; background: #999; ")
 	p Баннер
-p Главная - оптовая торговле франшиза
+//p Главная - оптовая торговле франшиза
+form(class="form-inline my-2")
+	input(class="form-control mr-sm-2" type="text" placeholder="Поиск по франшизам")
+	button(сlass="btn btn-outline-success my-2 my-sm-0" type="submit") Поиск
