--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -1,11 +1,10 @@
 footer
     p(class="float-right")
         a(href="#") Back to top
-    p © 2017 Company, Inc. · 
-        a(href="#") Privacy
-        a(href="#") Terms
-    script(src="/js/vendor/jquery-3.2.1.min.js")
-    script(src="/js/vendor/tether.min.js") 
-    script(src="/js/vendor/bootstrap.min.js") 
-    script(src="/js/vendor/holder.min.js") 
-    script(src="/js/vendor/ie10-viewport-bug-workaround.js") 	
+    p © 2017 Le-Dantu · 
+        a(href="#") Соглашение
+    script(src="js/vendor/jquery-3.2.1.min.js")
+    script(src="js/vendor/tether.min.js") 
+    script(src="js/vendor/bootstrap.min.js") 
+    script(src="js/vendor/holder.min.js") 
+    script(src="js/vendor/ie10-viewport-bug-workaround.js") 	
