--- a/src/pug/head.pug
+++ b/src/pug/head.pug
@@ -4,5 +4,5 @@ html(lang="ru")
 		meta(charset="utf-8")
 		meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
 		title Франшизы
-		link(href="/css/bootstrap.min.css" rel="stylesheet")
-		link(href="/css/custom.css" rel="stylesheet")
+		link(href="css/bootstrap.min.css" rel="stylesheet")
+		link(href="css/custom.css" rel="stylesheet")
