--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,22 +5,12 @@ body
     div(class="container marketing")
         h2(class="text-center" style="margin-bottom: 40px;") Категории
         div(class="row")
-            div(class="col-lg-4") 
-                img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
-                h2 Heading
-                p Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-                p 
-                    a(class="btn btn-secondary" href="/internal.html" role="button") View details »
-            div(class="col-lg-4") 
-                img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
-                h2 Heading
-                p Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-                p 
-                    a(class="btn btn-secondary" href="/internal.html" role="button") View details »
-            div(class="col-lg-4") 
-                img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
-                h2 Heading
-                p Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.
-                p 
-                    a(class="btn btn-secondary" href="/internal.html" role="button") View details »
+            mixin categoriya(number)
+                div(class="col-lg-4") 
+                        img(class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140") 
+                        h2
+                            a(href="internal.html" role="button") Категория #{number}
+            - var n = 1;
+              while n < 10
+                +categoriya(n++)
 include footer
